using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string IsRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
}
